package com.stombie.uploader_v4.model.api;

import lombok.Getter;

@Getter
public class FFlowCreateResponse extends FFlowBaseResponse {
    private String flowUrl;
}
